Disable TYPE_WINDOW animations on X11

We were using "remove_standard_frame" to determine whether to show
animations on TYPE_WINDOW. However in X11, the animations are always
handled by the window manager, whether there is a custom frame or not.

Bug: 695943
Change-Id: Ie5cf516feea77b18476cd73290fcfe0a30cac008