ui/views/widget/desktop_aura/desktop_window_tree_host_win.h
@@ -99,6 +99,8 @@ class VIEWS_EXPORT DesktopWindowTreeHostWin
       Widget::MoveLoopEscapeBehavior escape_behavior) override;
   void EndMoveLoop() override;
   void SetVisibilityChangedAnimationsEnabled(bool value) override;
+  bool ShouldDisableWindowAnimations(
+      const Widget::InitParams& params) const override;
   NonClientFrameView* CreateNonClientFrameView() override;
   bool ShouldUseNativeFrame() const override;
   bool ShouldWindowContentsBeTransparent() const override;
